# oss-pulse

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/oss_pulse/: __init__.py  http.py  ingest.py  logging_utils.py  parse.py  state.py  writer.py
tests/: test_ingest.py  test_parse.py
transform/: dbt_project.yml  profiles.yml
transform/macros/: bot_detection.sql
transform/models/: sources.yml
transform/models/marts/: dim_actor.sql  dim_date.sql  dim_repo.sql  fct_events.sql  marts.yml
transform/models/staging/: staging.yml  stg_gharchive__events.sql
transform/tests/: assert_no_future_events.sql
transform/tests/generic/: test_non_negative.sql
